<resources>
    <string name="app_name">CandidateRegistration</string>
    <string name="image_about_app">image_about_app</string>
    <string name="welcome">Welcome !</string>
    <string name="enter_emailId">enter EmailId</string>
    <string name="about_welcome">about_welcome</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_date_of_birth">Enter Date Of Birth</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_passeord">Enter Valid Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="title_activity_edit_details">EditDetailsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="candidate_registration">Candidate Registration</string>
    <string name="recordaudio">RecordAudio</string>
    <string name="scan_qr">Scan QR</string>
    <string name="call">Call</string>
    <string name="message">message</string>
    <string name="mail">mail</string>
    <string name="communicate">Communicate</string>
    <string name="logout">LogOut</string>
    <string name="stopaudio">StopAudio</string>
    <string name="already_a_member_login"><u>Already a member? Login</u></string>
    <string name="email_id">Email Id</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="xyz">xyz</string>
    <string name="address">Address</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="no_recordings_found">No Recordings found.</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="squareandcube_com">SquareandCube.com</string>
    <string name="voice_001">Voice 001</string>
</resources>
