<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_backgroundapp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditDetailsActivity"
    tools:showIn="@layout/app_bar_edit_details">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ToggleButton
            android:layout_width="@dimen/dimen_80dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_background_pink"
            android:textOff="Off"
            android:checked="true"
            android:textOn="On"
            android:id="@+id/toggle"/>
    </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/dimen_40dp"
    android:layout_height="wrap_content">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="#5B84BC"
        android:id="@+id/circularImage"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@color/colorWhite"
        android:text="@string/id"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:id="@+id/id"/>
    <TextView
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/email_id"/>
    <EditText
        android:layout_width="match_parent"
        android:enabled="false"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDetailsEmail"/>
    <TextView
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"/>
    <EditText
        android:layout_width="match_parent"
        android:enabled="false"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDetailsFName"/>
    <TextView
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:id="@+id/textViewDetailsLName"/>
    <TextView
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:id="@+id/textViewDetailsPassword"/>
    <TextView
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:drawableRight="@drawable/ic_date"
        android:id="@+id/textViewDetailsDateOfBirth"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:gravity="center"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="@dimen/dimen_40dp"
            android:id="@+id/buttonEdit"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_15sp"
            android:background="@drawable/ic_background_light"
            android:text="@string/edit"/>
        <Button
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="@dimen/dimen_40dp"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_15sp"
            android:visibility="gone"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:id="@+id/buttonUpdate"
            android:background="@drawable/ic_background_light"
            android:text="@string/update"/>
    </LinearLayout>


</LinearLayout>
</android.support.constraint.ConstraintLayout>