<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:paddingTop="@dimen/dimen_40dp"
    android:paddingBottom="@dimen/dimen_20dp"
    android:paddingLeft="@dimen/dimen_20dp"
    android:paddingRight="@dimen/dimen_20dp"
    android:background="@drawable/ic_background_pink"
    tools:context=".CandidateRegistrationActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/dimen_20dp"
    android:id="@+id/linearLayoutCompat"
    android:layout_height="match_parent">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_balaji"/>
    <TextView
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_15sp"
            android:textColor="@color/colorWhite"
            android:id="@+id/textViewFirstName"
            android:text="@string/enter_first_name"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayoutFirstName">

     <EditText
        android:layout_width="match_parent"
        android:paddingTop="@dimen/dimen_10dp"
        android:inputType="text"
         android:background="@drawable/edittext_selector"
         android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextFirstName"
        />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_15dp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:id="@+id/textViewLastName"
        android:text="@string/enter_last_name"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayoutLastName">

    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:background="@drawable/edittext_selector"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_10dp"
        android:inputType="text"
        android:id="@+id/editTextLastName"
        />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_15sp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:id="@+id/textViewEmailId"
        android:text="@string/enter_email_id"
        tools:ignore="SpUsage" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayoutEmailId">

    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:background="@drawable/edittext_selector"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_10dp"
        android:inputType="textEmailAddress"
        android:id="@+id/editTextEmailId"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_15sp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:id="@+id/textViewDateOfBirth"
        android:text="@string/enter_date_of_birth"
        tools:ignore="SpUsage" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayoutDateOfBirth">
    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:background="@drawable/edittext_selector"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_10dp"
        android:drawableRight="@drawable/ic_date"
        android:id="@+id/editTextDateOfBirht"
        />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_15sp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:id="@+id/textViewPasseord"
        android:text="@string/enter_password"
        tools:ignore="SpUsage" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayoutPassword">
    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:background="@drawable/edittext_selector"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_10dp"
        android:inputType="textPassword"
        android:id="@+id/editTextPassword"
        />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_15sp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:id="@+id/textViewReEnterPassword"
        android:text="@string/re_enter_password"
        tools:ignore="SpUsage" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayoutReEnterPassword">
    <EditText
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:background="@drawable/edittext_selector"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_10dp"
        android:inputType="textPassword"
        android:id="@+id/editTextReEnterPassword"
        />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:textColor="@color/colorRed"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:background="@drawable/button_selector"
        android:id="@+id/buttonRegister1"
        android:text="@string/register"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewLoginLink"
        android:gravity="center"
        android:visibility="visible"
        android:layout_marginBottom="@dimen/dimen_40dp"
        android:text="@string/already_a_member_login"
        />
</LinearLayout>

    </ScrollView>


