<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/ic_login_background"
    android:layout_height="match_parent"
    android:id="@+id/nestedScrollView"
    tools:context=".CandidateLoginActivity">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_margin="@dimen/dimen_60dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayoutEmail1"
            android:layout_marginTop="@dimen/dimen_40dp"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextEmail1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                  android:hint="@string/enter_emailId"
                android:drawableRight="@drawable/ic_mail_24dp"
                  android:inputType="textEmailAddress"
                  android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:id="@+id/textInputLayoutPassword1">
            <android.support.design.widget.TextInputEditText
               android:id="@+id/textInputEditTextPassword1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>
        <CheckBox
            android:layout_width="wrap_content"
            android:id="@+id/checkBox"
            android:layout_height="wrap_content"
            android:text="Remember me"/>
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:background="@drawable/button_selector"
            android:textColor="@color/colorWhite"
            android:id="@+id/appCompactButtonLogIn"
            android:text="@string/login"/>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>